tests/platform_import_alias_bad.stderr
tests/platform_import_alias_bad.hop:2:8: error: HOP1004: unexpected token
