tests/platform_import_alias_bad.hop
// Verifies platform import alias is rejected.
import p "platform"

fn main() {}
